force-app/main/default/objects/DRC_NBC_Addresses__c/DRC_NBC_Addresses__c.object-meta.xml
<CustomObject>
    <label>Address</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>NO.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>