force-app/main/default/objects/DRC_NBC_Addresses__c/fields/DRC_Inco_Term__c.field-meta.xml
<CustomField>
    <fullName>DRC_Inco_Term__c</fullName>
    <label>Inco Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charges Collect (CC)</fullName>
            </value>
            <value>
                <fullName>Cost &amp; Freight (CFR)</fullName>
            </value>
            <value>
                <fullName>Cost Insurance &amp; Freight (CIF)</fullName>
            </value>
            <value>
                <fullName>Courier (COURIER)</fullName>
            </value>
            <value>
                <fullName>Carriage Paid To (CPT)</fullName>
            </value>
            <value>
                <fullName>Delivered At Place (DAP)</fullName>
            </value>
            <value>
                <fullName>Door Delivery (DD)</fullName>
            </value>
            <value>
                <fullName>Delivered Duty Paid (DDP)</fullName>
            </value>
            <value>
                <fullName>Ex Bhiwandi (EXBH)</fullName>
            </value>
            <value>
                <fullName>Ex Works (EXW)</fullName>
            </value>
            <value>
                <fullName>Free On Board (FOB)</fullName>
            </value>
            <value>
                <fullName>Freight Paid Delivered (FOR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>