force-app/main/default/objects/DRC_NBC_Addresses__c/fields/DRC_NBC_Account__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Address</relationshipLabel>
    <relationshipName>Address</relationshipName>
    <type>Lookup</type>
</CustomField>