force-app/main/default/objects/DRC_NBC_Addresses__c/fields/DRC_NBC_Address__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>