force-app/main/default/objects/DRC_NBC_Addresses__c/fields/DRC_NBC_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Full_Address__c</fullName>
    <formula>DRC_NBC_Address__Street__s &amp; 
IF(NOT(ISBLANK(DRC_NBC_Address__City__s)), &apos;, &apos; &amp; DRC_NBC_Address__City__s, &apos;&apos;) &amp;
IF(NOT(ISBLANK(DRC_NBC_Address__PostalCode__s)), &apos;, &apos; &amp; DRC_NBC_Address__PostalCode__s, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Name</label>
    <type>Text</type>
</CustomField>