force-app/main/default/objects/DRC_NBC_Addresses__c/fields/DRC_NBC_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_GST_Number__c</fullName>
    <label>GST Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>