force-app/main/default/objects/DRC_NBC_Addresses__c/fields/DRC_NBC_Ship_To_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Ship_To_Code__c</fullName>
    <label>Ship To Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>