force-app/main/default/objects/DRC_NBC_Addresses__c/fields/DRC_NBC_Ship_To_Seq__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Ship_To_Seq__c</fullName>
    <label>Ship To Seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>