force-app/main/default/objects/DRC_NBC_Addresses__c/fields/DRC_NBC_Type__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipping</fullName>
                <default>true</default>
                <label>Shipping</label>
            </value>
            <value>
                <fullName>Billing</fullName>
                <isActive>false</isActive>
                <label>Billing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>