force-app/main/default/objects/DRC_NBC_Addresses__c/fields/DRC_Shipping_Gst_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>DRC_Shipping_Gst_Customer_Type__c</fullName>
    <label>Gst Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Unregistered</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>