force-app/main/default/objects/DRC_NBC_Addresses__c/validationRules/DRC_NBC_Block_to_edit_filed.validationRule-meta.xml
<ValidationRule>
    <fullName>DRC_NBC_Block_to_edit_filed</fullName>
    <active>false</active>
    <errorConditionFormula>OR(       
        ISCHANGED(DRC_NBC_Ship_To_Code__c),
    
        ISCHANGED(DRC_NBC_Type__c)
   )</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Ship_To_Code__c</errorDisplayField>
    <errorMessage>You cannot  edit Ship To Code.</errorMessage>
</ValidationRule>