force-app/main/default/objects/DRC_NBC_Addresses__c/validationRules/GST_Customer_type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Customer_type_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(DRC_NBC_Type__c, &quot;Shipping&quot;),
    ISBLANK(TEXT(DRC_Shipping_Gst_Customer_Type__c))
)</errorConditionFormula>
    <errorDisplayField>DRC_Shipping_Gst_Customer_Type__c</errorDisplayField>
    <errorMessage>GST Type is mandatory for Shipping Address.</errorMessage>
</ValidationRule>