force-app/main/default/objects/DRC_NBC_Addresses__c/validationRules/GST_Number_Required_On_Customertype.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Number_Required_On_Customertype</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(DRC_Shipping_Gst_Customer_Type__c, &quot;Registered&quot;),
    ISBLANK(DRC_NBC_GST_Number__c)
)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_GST_Number__c</errorDisplayField>
    <errorMessage>NBC GST Number is required when Shipping GST Customer Type is selected.</errorMessage>
</ValidationRule>