force-app/main/default/objects/DRC_NBC_Addresses__c/validationRules/Validate_GST_Number_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_GST_Number_Address</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
    OR(
        ISBLANK(DRC_NBC_GST_Number__c),
        REGEX(
            DRC_NBC_GST_Number__c,
            &quot;^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[0-9A-Z]{1}$&quot;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_GST_Number__c</errorDisplayField>
    <errorMessage>Invalid GST number format. Please enter a valid 15-character GSTIN (e.g., 27ABCDE1234F1Z5).</errorMessage>
</ValidationRule>