force-app/main/default/objects/DRC_NBC_Addresses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DRC_NBC_Full_Address__c</columns>
    <columns>DRC_NBC_GST_Number__c</columns>
    <columns>DRC_NBC_Warehouse__c</columns>
    <columns>DRC_NBC_Account__c</columns>
    <columns>DRC_NBC_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>